# tg_bot_efrsb

./: .gitignore  main.py  pyproject.toml
app/data/: config.py
app/database/: models.py  pydantic_models.py  requests.py
app/handlers/: get_dates_handler.py  main_menu.py  osint_dyxless_handler.py
app/keyboards/: back_to_main_menu_kb.py  choose_osint_kb.py  get_dates_kb.py
app/middlewares/: db.py  delete_old_reply_markup.py  reset_states_to_commands.py
app/states/: get_dates_st.py
app/texts/: buttons.py  callback_datas.py  messages.py
app/utils/: generate_xlsx.py
app/utils/dyxless/: dyxless.py  models.py
app/utils/efrsb/: models.py  parse_data.py
