[project]
name = "bankruptcy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "environs>=14.1.1",
    "openpyxl>=3.1.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "xlsxwriter>=3.2.3",
]
